--- a/Project.toml
+++ b/Project.toml
@@ -5,9 +5,11 @@ authors = ["F. Capolupo"]
 
 [deps]
 JavaCall = "494afd89-becb-516b-aafa-70d2670c0337"
+Preferences = "21216c6a-2e73-6563-6e65-726566657250"
 
 [compat]
 JavaCall = "0.8.1"
+Preferences = "1.5.0"
 julia = "1.10"
 
 [extras]
